# wddroidy

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  justfile  pyproject.toml  wddroidy.py
reference/: DROID_SignatureFile_WDQS_2024-09-22T07-48-41Z.xml
requirements/: local.txt  requirements.txt
src/wddroidy/: wddroidy.py
